[package]
name = "seqdia"
version = "0.1.0"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
pest = "2.1"
pest_derive = "2.1"
xmlwriter = "0.1"
wasm-bindgen = { version="0.2", features=["serde-serialize"] }
serde = { version="1.0", features=["derive"] }
lz4-compression = "0.6"
base64 = "0.11"
unicode-width = "0.1.7"
fnv = "1"
