[package]
name = "seqdia"
version = "0.1.0"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
pest = "2.1"
pest_derive = "2.1"
xmlwriter = "0.1"
wasm-bindgen = "0.2"
lz4-compression = "0.6"
base64 = "0.11"
unicode-width = "0.1"
fnv = "1"
wasm-logger = "0.2"
log = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"
thiserror = "1.0"
wee_alloc = "0.4"

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Document", "Element", "Node", "HtmlTableCellElement", "DomTokenList", "Location"]
